fixed spacing on small monitors

--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ h2 {
 }
 
 h1 {
-  margin-bottom: 10px;
   text-transform: uppercase;
   border-bottom: 1px solid darkorange;
   padding-bottom: 20px;
-  margin-bottom: 30px;
+  line-height: 38px;
+  margin: 10px 0 20px 0
+
 }
 
 h2 {
